--- a/style.css
+++ b/style.css
@@ -327,59 +327,52 @@
   font-size: 120px;
 }
 
-.rocketImgAnimate {
-  -webkit-animation: moveUp 2s linear;
-  -moz-webkit-animation: moveUp 2s linear;
-  animation: moveUp 2s linear;
+.y1 {
+  display: none;
+  position: relative;
+  top: -100%;
+  left: 0;
+  height: 100px;
+  z-index: 2;
+}
 
-  -webkit-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
+.cloudAnimation {
+  -webkit-animation: moveCloud 2s linear;
+  -moz-webkit-animation: moveCloud 2s linear;
+  animation: moveCloud 2s linear;
+}
+
+.rocketImgAnimate {
+  -webkit-animation: moveUp 20s linear;
+  -moz-webkit-animation: moveUp 20s linear;
+  animation: moveUp 20s linear;
 }
 
 .backImgAnimate {
   -webkit-animation: moveBackground 1s linear;
   -moz-webkit-animation: moveBackground 1s linear;
   animation: moveBackground 1s linear;
-
-  -webkit-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
 }
 
 .backgroundAnimate {
   -webkit-animation: backgroundAnimation 25s linear;
   -moz-webkit-animation: backgroundAnimation 25s linear;
   animation: backgroundAnimation 25s linear;
-
-  -webkit-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
 }
 
 .semiCircleAnimate {
   -webkit-animation: goUpSemiCircle 2s linear;
   -moz-webkit-animation: goUpSemiCircle 2s linear;
   animation: goUpSemiCircle 2s linear;
-
-  -webkit-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
 }
 
 .timerAnimate {
   -webkit-animation: goUp 2s linear;
   -moz-webkit-animation: goUp 2s linear;
   animation: goUp 2s linear;
+}
 
+.rocketImgAnimate, .backImgAnimate, .backgroundAnimate, .semiCircleAnimate, .timerAnimate, .cloudAnimation {
   -webkit-animation-fill-mode: forwards;
   -moz-animation-fill-mode: forwards;
   -ms-animation-fill-mode: forwards;
@@ -456,14 +449,41 @@
   }
 }
 
+@keyframes moveCloud {
+  0% {
+    top: -100%;
+  }
+  100% {
+    top: 110vh;
+  }
+}
+
 @keyframes moveUp {
   0% {
     bottom: 20px;
+    transform: rotate(0deg);
   }
-  100% {
+  10% {
     bottom: 50%;
+    transform: rotate(0deg);
     /* transform: translate(0%, -150%); */
     /* margin-bottom: 25%; */
+  }
+  70% {
+    bottom: 55%;
+    transform: rotate(15deg);
+  }
+  80% {
+    bottom: 55%;
+    transform: rotate(20deg);
+  }
+  90% {
+    bottom: 60%;
+    transform: rotate(30deg);
+  }
+  100% {
+    bottom: 60%;
+    transform: rotate(45deg);
   }
 }
 
